--- a/style.css
+++ b/style.css
@@ -34,8 +34,10 @@ ul {
 ul > * {
     text-align: center;
     height: 25rem;
-    border: 1px solid;
+    border: 1px solid #81ecec;
+    border-radius: 10px;
     word-wrap: break-word;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
 .card {
     margin-left: 10px;
